add grassfieldtest